--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,14 @@ li{
   list-style: none;
 }
 
+a{
+  text-decoration: none;
+  color: black;
+}
+
+.active{
+  text-decoration: underline;
+}
 .all-products{
   display: flex;
   flex-wrap: wrap;
@@ -54,8 +62,13 @@ li{
   justify-content: center;
 }
 .page-numbers>ul>li{
-    margin: 2%;
+    margin: 1%;
     text-decoration: none;
+}
+
+.total-pages{
+  text-align: center;
+  margin-bottom: 2%;
 }
 
 @media only screen and (max-device-width : 768px) {
